Cambiado a la versión 1.10.2, todo funciona correctamente.
Falta actualizar el mapa de altura del chunk y la iluminación del cielo
debajo de la nave.

--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,18 @@
     <groupId>gosella.github.io</groupId>
     <artifactId>FastMove</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -23,16 +35,19 @@
         <dependency>
             <groupId>com.destroystokyo.paper</groupId>
             <artifactId>paper-api</artifactId>
-            <version>1.11.2-R0.1-SNAPSHOT</version>
+            <!--<version>1.11.2-R0.1-SNAPSHOT</version>-->
+            <version>1.10.2-R0.1-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
 
         <dependency>
             <groupId>org.bukkit</groupId>
             <artifactId>paper</artifactId>
-            <version>1.11.2-R0.1-SNAPSHOT</version>
+            <!--<version>1.11.2-R0.1-SNAPSHOT</version>-->
+            <version>1.10.2-R0.1-SNAPSHOT</version>
             <scope>system</scope>
-            <systemPath>/home/german/desarrollo/movecraft/paper/Paper/Paper-Server/target/paper-1.11.2.jar</systemPath>
+            <!--<systemPath>/home/german/desarrollo/movecraft/paper/Paper/Paper-Server/target/paper-1.11.2.jar</systemPath>-->
+            <systemPath>/home/german/desarrollo/movecraft/paper/server-1.10.2/cache/patched_1.10.2.jar</systemPath>
         </dependency>
     </dependencies>
 
